<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="cancel">Cancel</string>
    <string name="saving">Saving ...</string>
    <string name="request">Request ...</string>

    <!-- BootApp -->
    <string name="rec">Sign Up</string>
    <string name="login">Login</string>

    <!-- Login -->
    <string name="forgot_password"><u><i>Forgot Password ?</i></u></string>

    <!-- Forgot Password -->
    <string name="reset_password">Reset password</string>

    <!-- Sign Up -->
    <string name="forward">Continue</string>
    <string name="personal_data">Personal data</string>
    <string name="img_profile">Picture profile</string>
    <string name="name">Name</string>
    <string name="lastname">Last name</string>
    <string name="birth_date">Date of birth</string>
    <string name="tel">Phone</string>
    <string name="city">City</string>
    <string name="physical_data">Physical data</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="target">Target</string>
    <string name="marathon">Marathon</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="access_data">Access data</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Validazione Sign Up -->
    <string name="name_not_empty">Name not empty</string>
    <string name="lastname_not_empty">Last name not empty</string>
    <string name="birth_date_not_empty">Date of birth not empty</string>
    <string name="email_not_empty">Email not empty</string>
    <string name="tel_not_empty">Phone not empty</string>
    <string name="city_not_empty">City not empty</string>
    <string name="gender_not_empty">Gender not empty</string>
    <string name="target_not_empty">Target not empty</string>
    <string name="weight_not_empty">Weight not empty</string>
    <string name="height_not_empty">Height not empty</string>
    <string name="username_not_empty">Username not empty</string>
    <string name="password_not_empty">Password not empty</string>
    <string name="confirm_password_not_empty">Confirm Password not empty</string>

    <!-- Activation Account -->
    <string name="activation_account">Account Activation</string>
    <string name="check_code">Activation code</string>


    <!-- Impostazioni -->
    <string name="sport">Sport</string>
    <string name="walk">Walk</string>
    <string name="run">Run</string>
    <string name="profile">Profile</string>
    <string name="location">Location</string>
    <string name="measure_unit">Measure Unit</string>
    <string name="language">Language</string>
    <string name="vocal_coach">Voice Coach</string>
    <string name="info">Information</string>
    <string name="exit">Exit</string>

    <!-- Home -->
    <string name="setting">Settings</string>
    <string name="workouts">Workouts</string>
    <string name="statistics">Statistics</string>

    <string name="yes">Yes</string>
    <string name="my_position">My Position</string>
    <string name="type_map">Maps Type</string>
    <string name="date">Day</string>
    <string name="time">Duration</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="middle_speed">Middle Speed</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>
    <string name="block_screen">Block screen</string>
    <string name="unlock_screen">Unlock screen</string>
    <string-array name="type_map">
        <item name="standard">Standard</item>
        <item name="satellite">Satellite</item>
        <item name="terrain">Terrain</item>
        <item name="hybrid">Hybrid</item>
    </string-array>

    <!-- MapFragment -->
    <string name="departure">Departure</string>
    <string name="arrivals">Arrivals</string>

    <!-- Riepilogo / Dettaglio Allenamento -->
    <string name="summary_workout">Summary</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="all"> All </string>
    <string name="year"> Year </string>
    <string name="month"> Month </string>
    <string name="week"> Week </string>
    <string name="detail_workout">Detail</string>
    <string name="workout">Workout</string>
    <string name="add">Add</string>
    <string name="no_available_abbr">N.A.</string>
    <string name="measure">Measure</string>

    <!-- User -->
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="delete_account">Delete account</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <!-- Statistiche -->
    <string name="statistic_data">Data</string>
    <string name="graphic_statistics">Graphic</string>
    <string name="nothing_value">No Value</string>

    <!-- Vocal Coach -->
    <string name="use_coach">Use voice coach</string>
    <string name="interval">Interval (min)</string>

    <!-- Music -->
    <string name="music">Music</string>
    <string name="use_playlist">Use PlayList</string>
    <string name="rename">Rename</string>
    <string name="use_like_primary">Use like primary</string>
    <string name="preview">Preview</string>
    <string name="create">Create</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="num_songs">Songs Number</string>
    <string name="date_creation">Creation Date</string>

    <!-- Informazioni account -->
    <string name="info_description">
        <b>Supported languages</b>:\n
        <string-array name="language">- <item name="english">English</item>,\n
            - <item name="italian">Italian</item>,\n
            - <item name="spanish">Spanish</item>
        </string-array>
    </string>

    <!-- Messaggi di info -->

    <string name="delete_account_mex">Are you sure to cancel the account?</string>
    <string name="password_request_success">You will receive an email with the link.</string>
    <string name="gps_disabled">GPS seems to be disabled, do you want to activate it?</string>
    <string name="delete_weight_mex">Are you sure you want to remove this weight?</string>
    <string name="delete_workout_mex">Are you sure you want to delete this workout?</string>
    <string name="delete_playlist_mex">Are you sure you want to delete this playlist?</string>
    <string name="delete_song_mex">Are you sure you want to delete this song?</string>
    <string name="correctly_sign_up">Registration successful! You will receive an email with a code.</string>
    <string name="account_use_other_device">Account in use on another device. Continue here ?</string>
    <string name="check_code_text">Enter the account activation code that was emailed to you.</string>
    <string name="continue_here">Continue here</string>

    <!-- Messaggi di errore -->
    <string name="error">Error</string>
    <string name="not_correct_password">Incorrect password</string>
    <string name="workout_not_set_correctly">At least DAY, SPORT and DURATION must be set</string>
    <string name="weight_not_set_correctly">WEIGHT and DATE must be set</string>
    <string name="not_empty">\u0020 not be empty</string>
    <string name="user_not_set">User not set</string>
    <string name="account_not_checked">Account not verified!</string>
    <string name="start_compression_image">Started Image Compression</string>
    <string name="end_compression_image">Finished Image Compression</string>
    <string name="internet_not_available_title">Mobile Data is Turned Off</string>
    <string name="internet_not_available_mex">Turn on mobile data or use WI-FI to access data.</string>
    <string name="token_not_valid">Invalid Session</string>
    <string name="connection_slow">Oops! Slow connection, try again later.</string>
    <string name="no_connection">Server unavailable</string>
    <string name="internal_server_error">Internal Server Error</string>

    <!-- Messaggi di warming per permessi -->
    <string name="permission_activity_recognition_title">Physical Activity Permit</string>
    <string name="permission_activity_recognition_message">This app needs access to your fitness data to track your steps and movement. Without this permission, we won\'t be able to provide you with an accurate count.</string>
    <string name="goto_settings">Go to settings</string>


    <!-- Da non TRADURRE -->

    <string name="app_name" translatable="false"><i>Run/Walk Tracking</i></string>
    <string name="space" translatable="false">\u0020</string>
    <string name="dot" translatable="false">.</string>
    <string name="colon" translatable="false">:</string>

    <string name="ok" translatable="false">OK</string>
    <string name="on" translatable="false">ON</string>
    <string name="off" translatable="false">OFF</string>
    <string name="no" translatable="false">No</string>

    <!-- Login -->
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="email" translatable="false">Email</string>

    <!-- Impostazione -->
    <string name="playlist" translatable="false">Playlist</string>

    <!-- Home -->
    <string name="home" translatable="false">Home</string>

    <string name="time_workout" translatable="false">00:00</string>
    <string name="distance_workout" translatable="false">0.00</string>
    <string name="calories_workout" translatable="false">0.00</string>

    <string name="unit_hours" translatable="false">h</string>
    <string name="unit_min" translatable="false">min</string>


    <string name="logout" translatable="false">Logout</string>
    <!-- Language Code -->
    <string name="it_code" translatable="false">it</string>
    <string name="en_code" translatable="false">en</string>
    <string name="es_code" translatable="false">es</string>



</resources>
