<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/info_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@color/checkState"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/distance"
            android:textAlignment="center"
            android:textColor="@color/checkState"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calories"
            android:textAlignment="center"
            android:textColor="@color/checkState"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/info_workout_numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_workout"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/time_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_workout"
            android:textAlignment="center"
            android:textColor="@color/checkState"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/distance_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/distance_workout"
            android:textAlignment="center"
            android:textColor="@color/checkState"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/calories_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calories_workout"
            android:textAlignment="center"
            android:textColor="@color/checkState"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_workout_numbers"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pause_workout"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pause"
            android:textColor="@color/checkState" />

        <Button
            android:id="@+id/restart_workout"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/restart"
            android:textColor="@color/checkState"
            android:visibility="gone" />

        <Button
            android:id="@+id/stop_workout"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop"
            android:textColor="@color/checkState"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>