<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ScrollView">

    <LinearLayout style="@style/LinearLayout" >

        <RelativeLayout
            android:id="@+id/layout_username"
            style="@style/RelativeLayout">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextLayoutTheme"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/access_username"
                    style="@style/EditTextTheme.Text"
                    android:drawableStart="@drawable/ic_user" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_old_password"
            style="@style/RelativeLayout">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextLayoutTheme"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/access_password"
                    style="@style/EditTextTheme.Password"
                    android:drawableStart="@drawable/ic_password" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="false"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            style="@style/ButtonTheme"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            app:icon="@drawable/ic_login" />

    </LinearLayout>
</ScrollView>