<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/info_workout_numbers"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/info_workout"
    android:layout_marginTop="5dp"
    android:background="@color/colorPrimary"
    android:orientation="horizontal">


        <TextView
            android:id="@+id/time_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_workout"
            android:textAlignment="center"
            android:textColor="@color/checkState"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/distance_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/distance_workout"
            android:textAlignment="center"
            android:textColor="@color/checkState"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/calories_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calories_workout"
            android:textAlignment="center"
            android:textColor="@color/checkState"
            android:textSize="18sp" />

</LinearLayout>

