<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ScrollView">

    <LinearLayout style="@style/LinearLayout">

        <LinearLayout
            android:id="@+id/profile_layout_name_lastname"
            style="@style/RelativeLayout">

            <view
                android:id="@+id/profile_img_layout"
                class="com.run_walk_tracking_gps.gui.components.Factory$CustomImageProfile"
                style="@style/ImageProfileTheme"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                    <RelativeLayout
                        android:id="@+id/profile_layout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/EditTextLayoutTheme.TextViewLayout"
                            android:hint="@string/name">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/profile_name"
                                style="@style/EditTextTheme.TextViewLayout" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/profile_layout_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/profile_layout_name">


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/EditTextLayoutTheme.TextViewLayout"
                            android:hint="@string/lastname">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/profile_lastname"
                            style="@style/EditTextTheme.TextViewLayout" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/profile_layout_gender"
            style="@style/RelativeLayout">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextLayoutTheme.TextViewLayout"
                android:hint="@string/gender">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_gender"
                    style="@style/EditTextTheme.TextViewLayout"
                    android:drawableStart="@drawable/ic_gender" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/profile_layout_birth_date"
            style="@style/RelativeLayout">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextLayoutTheme.TextViewLayout"
                android:hint="@string/birth_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_birth_date"
                    style="@style/EditTextTheme.TextViewLayout"
                    android:drawableStart="@drawable/ic_calendar" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/profile_layout_email"
            style="@style/RelativeLayout">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextLayoutTheme.TextViewLayout"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_email"
                    style="@style/EditTextTheme.TextViewLayout"
                    android:drawableStart="@drawable/ic_email"/>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/profile_layout_city"
            style="@style/RelativeLayout">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextLayoutTheme.TextViewLayout"
                android:hint="@string/city">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_city"
                    style="@style/EditTextTheme.TextViewLayout"
                    android:drawableStart="@drawable/ic_city" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/profile_layout_tel"
            style="@style/RelativeLayout">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextLayoutTheme.TextViewLayout"
                android:hint="@string/tel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_tel"
                    style="@style/EditTextTheme.TextViewLayout"
                    android:drawableStart="@drawable/ic_phone" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/profile_layout_height"
            style="@style/RelativeLayout">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextLayoutTheme.TextViewLayout"
                android:hint="@string/height">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_height"
                    style="@style/EditTextTheme.TextViewLayout"
                    android:drawableStart="@drawable/ic_height" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>