<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollView">

    <LinearLayout style="@style/LinearLayout">

        <RelativeLayout
            android:id="@+id/password_forgot_layout"
            style="@style/RelativeLayout">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextLayoutTheme"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgot_email"
                    style="@style/EditTextTheme.Email"
                    android:drawableStart="@drawable/ic_email"/>

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_forgot_layout_request"
            style="@style/RelativeLayout"
            android:layout_below="@id/password_forgot_layout">

            <TextView
                android:id="@+id/request_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/password_request_success"
                android:textColor="@color/checkState"
                android:visibility="gone" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/password_forgot_request"
                style="@style/ButtonTheme"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:text="@string/reset_password" />
        </RelativeLayout>

    </LinearLayout>


</ScrollView>

