<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ScrollView">

    <LinearLayout style="@style/LinearLayout">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/check_code_text"
                android:textAlignment="center"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/access_layout_token"
                style="@style/RelativeLayout">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/EditTextLayoutTheme"
                    android:hint="@string/check_code">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/access_token"
                        style="@style/EditTextTheme.Text"/>

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/access_layout_login_token"
                style="@style/RelativeLayout">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/access_login_token"
                    style="@style/ButtonTheme"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/login"
                    app:icon="@drawable/ic_login" />
            </RelativeLayout>

    </LinearLayout>

</ScrollView>
